k8s/auth-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      component: auth-api

  template:
    metadata:
      labels:
        component: auth-api
    spec:
      containers:
        - name: auth-api
          image: arwedstorm/auth-api
          ports:
            - containerPort: 3001
