k8s/auth-gui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-gui-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      component: auth-gui

  template:
    metadata:
      labels:
        component: auth-gui
    spec:
      containers:
        - name: auth-gui
          image: arwedstorm/auth-gui
          ports:
            - containerPort: 3000
