k8s/auth-api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-api-cluster-ip-service

spec:
  type: ClusterIP
  selector:
    component: auth-api
  ports:
    - port: 3001
      targetPort: 3001
