k8s/auth-gui-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-gui-cluster-ip-service

spec:
  type: ClusterIP
  selector:
    component: auth-gui
  ports:
    - port: 3000
      targetPort: 3000
