k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    # removes path appendix (/api):
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    # connects to issuer (https-service):
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # # redirects incomming trafic to https connection
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  # # tls section connects to dns
  # tls:
  #   - hosts:
  #       - sabbas.de
  #       - www.sabbas.de
  #     # secret created by certificate object
  #     secretName: sabbas-de-tls
  rules:
    # - host: sabbas.de
    - http:
        paths:
          - path: /
            backend:
              serviceName: auth-api-cluster-ip-service
              servicePort: 3000
    # - host: www.sabbas.de
    # - http:
    #     paths:
    #       - path: /
    #         backend:
    #           serviceName: vidly-cluster-ip-service
    #           servicePort: 3000
